Bug 258193 nsIDOMMouseEvent::GetButton() broken with contextmenu event p=trev@gtchat.de r=jst sr=bzbarsky